[gd_scene load_steps=4 format=3 uid="uid://brjgug4dk6qvo"]

[ext_resource type="Theme" uid="uid://cnuol0ry2vobn" path="res://addons/gspot/assets/gspot_theme.tres" id="1_txn20"]
[ext_resource type="LabelSettings" uid="uid://cyuy5onflhliv" path="res://addons/gspot/assets/shadowed_label.tres" id="2_aqhky"]
[ext_resource type="Script" path="res://addons/gspot/ui/gsscalar_control.gd" id="2_nvjjo"]

[node name="GSScalarControl" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_txn20")
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2
script = ExtResource("2_nvjjo")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Actuator Type"
label_settings = ExtResource("2_aqhky")
vertical_alignment = 1

[node name="ActuatorType" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("2_aqhky")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Index"
label_settings = ExtResource("2_aqhky")
vertical_alignment = 1

[node name="Index" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("2_aqhky")
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Scalar"
label_settings = ExtResource("2_aqhky")
vertical_alignment = 1

[node name="Scalar" type="HSlider" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="PlayPattern" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Play Pattern"

[node name="StopPattern" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Stop Pattern"

[node name="PausePattern" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Pause Pattern"

[node name="ResumePattern" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Resume Pattern"

[node name="OpenDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open Pattern..."
initial_position = 4
size = Vector2i(1280, 720)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pattern")
use_native_dialog = true

[connection signal="value_changed" from="Scalar" to="." method="_on_scalar_value_changed"]
[connection signal="pressed" from="PlayPattern" to="." method="_on_play_pattern_pressed"]
[connection signal="pressed" from="StopPattern" to="." method="_on_stop_pattern_pressed"]
[connection signal="pressed" from="PausePattern" to="." method="_on_pause_pattern_pressed"]
[connection signal="pressed" from="ResumePattern" to="." method="_on_resume_pattern_pressed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
